--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -28,7 +28,7 @@
     padding: 0 14px;
     border: 1px solid #f4f4f7;
 		color: #000;
-    font-size: 18px;
+    font-size: 16px;
 	}
 	select {
 		height: 58px;
@@ -36,7 +36,14 @@
 		border: 1px solid #f4f4f7;
 		border-radius: 100vw;
 		background-color: #f4f4f7;
-		font-size: 18px;
+		font-size: 16px;
+	}
+	.check {
+		.check__inner {
+			input[type='checkbox'] {
+				border-radius: 50%;
+			}
+		}
 	}
 	.div_margin {
 		margin: 10px 0 20px;
@@ -180,6 +187,7 @@
 				.myshop__title {
 					font-weight: 600;
 					font-size: 18px;
+					@include mixins.ATdm();
 				}
 			}
 		}
