--- a/src/assets/css/review_board.scss
+++ b/src/assets/css/review_board.scss
@@ -458,6 +458,7 @@
       .commentWrite {
         background: #ffffff;
         text-align: left;
+        border-radius: 0;
         .count {
           margin-left: 0;
           padding-left: 0;
