--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -3542,6 +3542,7 @@
 			margin-bottom: -1px;
 			z-index: 1;
 			table {
+				table-layout: initial;
 				white-space: nowrap;
 			}
 			tr {
@@ -3554,6 +3555,7 @@
 				padding-right: 40px;
 				&:first-child {
 					width: 110px;
+					padding-right: 0;
 				}
 			}
 			td {
