로그인 수정사항

--- a/src/assets/css/member.scss
+++ b/src/assets/css/member.scss
@@ -555,6 +555,7 @@
 		}
 		.member__container--login {
 			padding-top: 80px;
+			padding-bottom: 0;
 		}
 		.member__container--join-result {
 			.member__header {
