--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -465,8 +465,7 @@
 			width: 100%;
 			height: 100%;
 			margin-left: 0;
-			// padding: 135px 15px 90px;
-			padding: 0 15px;
+			padding: 135px 15px 90px;
 			background-color: #fff;
 			@include mixins.translate(-100vw, 0);
 			.nav__container {
@@ -474,7 +473,6 @@
 				justify-content: stretch;
 				overflow-y: auto;
 				height: 100%;
-				padding: 135px 0 90px;
 			}
 			.nav__trigger {
 				display: none;
@@ -565,8 +563,6 @@
 				width: 100%;
 				height: 50px;
 				border-radius: 0;
-				z-index: 10;
-				background-color: #fff;
 
 				.marquee {
 					clip-path: none;
