product, review css

--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -1238,6 +1238,7 @@
     width: 100%;
     font-size: 100px;
     font-weight: 400;
+    text-align: left;
     span {
       position: relative;
       display: block;
