--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -187,6 +187,12 @@
             text-align: left;
             padding-top: 0;
             padding-bottom: 25px;
+            &:after {
+              content: '전체선택';
+              display: inline-block;
+              margin-left: 5px;
+              vertical-align: middle;
+            }
           }
         }
       }
@@ -199,6 +205,10 @@
         tr {
           position: relative;
           height: auto;
+          margin-top: 20px;
+          &:first-child {
+            margin-top: 0;
+          }
           td {
             padding-left: 50%;
             font-size: 12px;
@@ -215,6 +225,11 @@
               padding-left: 0;
               img {
                 max-width: 130px !important;
+              }
+            }
+            ul.option {
+              > li {
+                font-size: 12px;
               }
             }
           }
@@ -281,7 +296,7 @@
     }
     @include breakpoints.mobile() {
       td {
-        padding-top: 10px;
+        // padding-top: 10px;
         > div {
           font-weight: 400;
           font-size: 12px;
