--- a/src/assets/css/member.scss
+++ b/src/assets/css/member.scss
@@ -742,6 +742,7 @@
 					// padding-top: 0;
 					padding-top: 80px;
 					padding-bottom: 65px;
+					padding-right: 0;
 				}
 			}
 			.login__visual {
