--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -3583,7 +3583,6 @@
 	}
 }
 
-
 .myshop_couponwrap {
 	display: flex;
 	gap: 10px;
@@ -3618,6 +3617,14 @@
 				top: 0;
 				// width: 100%;
 			}
+		}
+	}
+}
+
+.xans-myshop-boardpackage {
+	.myshop__row {
+		.myshop__short {
+			margin: 0 auto;
 		}
 	}
 }
