--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -888,26 +888,34 @@
 	}
 	.menu__category--outer {
 		background-image: url('../images/bg_menu_category_outer.png');
-		background-position: 50% 7.81vw;
-		background-size: 123.59vw auto;
+		// background-position: 50% 7.81vw;
+		// background-size: 123.59vw auto;
+		background-position: center center;
+		background-size: cover;
 		background-color: #b3f977;
 	}
 	.menu__category--bottom {
 		background-image: url('../images/bg_menu_category_bottom.png');
-		background-position: 50% -4.27vw;
-		background-size: 48.18vw auto;
+		// background-position: 50% -4.27vw;
+		// background-size: 48.18vw auto;
+		background-position: center center;
+		background-size: cover;
 		background-color: #5eecfa;
 	}
 	.menu__category--top {
 		background-image: url('../images/bg_menu_category_top.png');
-		background-position: 50% 4.11vw;
-		background-size: 88.49vw auto;
+		// background-position: 50% 4.11vw;
+		// background-size: 88.49vw auto;
+		background-position: center center;
+		background-size: cover;
 		background-color: #fffd72;
 	}
 	.menu__category--acc {
 		background-image: url('../images/bg_menu_category_acc.png');
-		background-position: 50% 50%;
-		background-size: 45.89vw auto;
+		// background-position: 50% 50%;
+		// background-size: 45.89vw auto;
+		background-position: center center;
+		background-size: cover;
 		background-color: #ffb5d1;
 	}
 
@@ -954,30 +962,30 @@
 				// }
 			}
 		}
-		.menu__category--outer {
-			background-image: url('../images/m_bg_menu_category_outer.png');
-			background-position: 50% 18.93vw;
-			background-size: 221.2vw auto;
-			background-color: #b3f977;
-		}
-		.menu__category--bottom {
-			background-image: url('../images/m_bg_menu_category_bottom.png');
-			background-position: 50% -13.47vw;
-			background-size: 93.07vw auto;
-			background-color: #5eecfa;
-		}
-		.menu__category--top {
-			background-image: url('../images/m_bg_menu_category_top.png');
-			background-position: 50% 14.8vw;
-			background-size: 160.93vw auto;
-			background-color: #fffd72;
-		}
-		.menu__category--acc {
-			background-image: url('../images/m_bg_menu_category_acc.png');
-			background-position: 50% 50%;
-			background-size: 92.27vw auto;
-			background-color: #ffb5d1;
-		}
+		// .menu__category--outer {
+		// 	background-image: url('../images/m_bg_menu_category_outer.png');
+		// 	background-position: 50% 18.93vw;
+		// 	background-size: 221.2vw auto;
+		// 	background-color: #b3f977;
+		// }
+		// .menu__category--bottom {
+		// 	background-image: url('../images/m_bg_menu_category_bottom.png');
+		// 	background-position: 50% -13.47vw;
+		// 	background-size: 93.07vw auto;
+		// 	background-color: #5eecfa;
+		// }
+		// .menu__category--top {
+		// 	background-image: url('../images/m_bg_menu_category_top.png');
+		// 	background-position: 50% 14.8vw;
+		// 	background-size: 160.93vw auto;
+		// 	background-color: #fffd72;
+		// }
+		// .menu__category--acc {
+		// 	background-image: url('../images/m_bg_menu_category_acc.png');
+		// 	background-position: 50% 50%;
+		// 	background-size: 92.27vw auto;
+		// 	background-color: #ffb5d1;
+		// }
 	}
 }
 
