--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -1557,6 +1557,32 @@
 			padding-right: 1vw;
 			font-size: 20px;
 		}
+		.coupon_nodata {
+			.coupon__top {
+				font-size: 20px;
+				font-weight: 600;
+				line-height: 1.3;
+			}
+			.coupon__bottom {
+				p {
+					@include mixins.ATr();
+					font-size: 18px;
+					letter-spacing: 5px;
+				}
+			}
+
+			@include breakpoints.mobile() {
+				.coupon__coupon {
+					.coupon__top {
+						padding: 15% 0;
+						font-size: 14px;
+						text-align: center;
+						br {display: none;}
+					}
+				}
+				.coupon__bottom {display: none;}
+			}
+		}
 	}
 
 	.review__sort {
