--- a/src/assets/css/order.scss
+++ b/src/assets/css/order.scss
@@ -1118,6 +1118,10 @@ width: 100%;
           margin-right: 0;
           h4 {
             position: relative;
+            width: 100%;
+            padding-bottom: 8px;
+            padding-left: 5px;
+            font-size: 13px;
           }
           textarea {
             padding:15px;
@@ -1125,6 +1129,9 @@ width: 100%;
             font-size: 12px;
             line-height: 1.5;
           }
+        }
+        input[type=checkbox] + label {
+          display: inline-block;
         }
       }
     }
