메인, 상품목록 수정

--- a/src/assets/css/basket_option.scss
+++ b/src/assets/css/basket_option.scss
@@ -14,7 +14,8 @@
     border: 0;
 }
 .menu__layer {
-    background-image: linear-gradient(green, green);
+    // background-image: linear-gradient(green, green);
+    background-color: #5EECFA;
 }
 .xans-product-optionselectlayer {
     position: relative;
